parser.out
Created by PLY (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> prgm
Rule 1     name -> IDENT
Rule 2     type_ -> INT
Rule 3     type_ -> BOOL
Rule 4     expr -> name
Rule 5     expr -> TRUE
Rule 6     expr -> FALSE
Rule 7     expr -> NUMBER
Rule 8     expr -> DASH expr
Rule 9     expr -> TILD expr
Rule 10    expr -> BANG expr
Rule 11    expr -> expr PLUS expr
Rule 12    expr -> expr DASH expr
Rule 13    expr -> expr STAR expr
Rule 14    expr -> expr SLASH expr
Rule 15    expr -> expr PCENT expr
Rule 16    expr -> expr AMP expr
Rule 17    expr -> expr PIPE expr
Rule 18    expr -> expr HAT expr
Rule 19    expr -> expr LTLT expr
Rule 20    expr -> expr GTGT expr
Rule 21    expr -> expr AMPAMP expr
Rule 22    expr -> expr PIPEPIPE expr
Rule 23    expr -> expr EQEQ expr
Rule 24    expr -> expr BANGEQ expr
Rule 25    expr -> expr LT expr
Rule 26    expr -> expr LTEQ expr
Rule 27    expr -> expr GT expr
Rule 28    expr -> expr GTEQ expr
Rule 29    expr -> LPAREN expr RPAREN
Rule 30    expr -> name LPAREN exprs_comma RPAREN
Rule 31    expr -> PRINT LPAREN expr RPAREN
Rule 32    exprs_comma_1 -> expr
Rule 33    exprs_comma_1 -> exprs_comma_1 COMMA expr
Rule 34    exprs_comma -> <empty>
Rule 35    exprs_comma -> exprs_comma_1
Rule 36    stmt -> VAR name EQ expr COLON type_ SEMICOLON
Rule 37    stmt -> name EQ expr SEMICOLON
Rule 38    stmt -> expr SEMICOLON
Rule 39    stmt -> IF LPAREN expr RPAREN sblock stmt_elif
Rule 40    stmt_elif -> <empty>
Rule 41    stmt_elif -> ELSE sblock
Rule 42    stmt_elif -> ELSE IF LPAREN expr RPAREN sblock stmt_elif
Rule 43    stmt -> WHILE LPAREN expr RPAREN sblock
Rule 44    stmt -> BREAK SEMICOLON
Rule 45    stmt -> CONTINUE SEMICOLON
Rule 46    stmt -> RETURN SEMICOLON
Rule 47    stmt -> RETURN expr SEMICOLON
Rule 48    stmt -> sblock
Rule 49    stmts -> <empty>
Rule 50    stmts -> stmts stmt
Rule 51    stmts -> stmts error SEMICOLON
Rule 52    sblock -> LBRACE stmts RBRACE
Rule 53    arg -> name COLON type_
Rule 54    args_1 -> arg
Rule 55    args_1 -> args_1 COMMA arg
Rule 56    args -> args_1
Rule 57    args -> <empty>
Rule 58    rty -> <empty>
Rule 59    rty -> COLON type_
Rule 60    procdecl -> DEF name LPAREN args RPAREN rty procdeclraises sblock
Rule 61    procdeclraises -> <empty>
Rule 62    procdeclraises -> RAISES raise_list
Rule 63    stmt -> RAISE name SEMICOLON
Rule 64    stmt -> TRY sblock catch catches
Rule 65    catches -> <empty>
Rule 66    catches -> catch catches
Rule 67    catch -> EXCEPT name sblock
Rule 68    raise_list -> name
Rule 69    raise_list -> name COMMA raise_list
Rule 70    exception -> EXCEPTION name SEMICOLON
Rule 71    globvardecl -> VAR name EQ expr COLON type_ SEMICOLON
Rule 72    topdecl -> procdecl
Rule 73    topdecl -> globvardecl
Rule 74    topdecl -> exception
Rule 75    prgm -> <empty>
Rule 76    prgm -> prgm topdecl

Terminals, with rules where they appear

AMP                  : 16
AMPAMP               : 21
BANG                 : 10
BANGEQ               : 24
BOOL                 : 3
BREAK                : 44
COLON                : 36 53 59 71
COMMA                : 33 55 69
CONTINUE             : 45
DASH                 : 8 12
DEF                  : 60
ELSE                 : 41 42
EQ                   : 36 37 71
EQEQ                 : 23
EXCEPT               : 67
EXCEPTION            : 70
FALSE                : 6
GT                   : 27
GTEQ                 : 28
GTGT                 : 20
HAT                  : 18
IDENT                : 1
IF                   : 39 42
INT                  : 2
LBRACE               : 52
LPAREN               : 29 30 31 39 42 43 60
LT                   : 25
LTEQ                 : 26
LTLT                 : 19
NUMBER               : 7
PCENT                : 15
PIPE                 : 17
PIPEPIPE             : 22
PLUS                 : 11
PRINT                : 31
RAISE                : 63
RAISES               : 62
RBRACE               : 52
RETURN               : 46 47
RPAREN               : 29 30 31 39 42 43 60
SEMICOLON            : 36 37 38 44 45 46 47 51 63 70 71
SLASH                : 14
STAR                 : 13
TILD                 : 9
TRUE                 : 5
TRY                  : 64
VAR                  : 36 71
WHILE                : 43
error                : 51

Nonterminals, with rules where they appear

arg                  : 54 55
args                 : 60
args_1               : 55 56
catch                : 64 66
catches              : 64 66
exception            : 74
expr                 : 8 9 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 31 32 33 36 37 38 39 42 43 47 71
exprs_comma          : 30
exprs_comma_1        : 33 35
globvardecl          : 73
name                 : 4 30 36 37 53 60 63 67 68 69 70 71
prgm                 : 76 0
procdecl             : 72
procdeclraises       : 60
raise_list           : 62 69
rty                  : 60
sblock               : 39 41 42 43 48 60 64 67
stmt                 : 50
stmt_elif            : 39 42
stmts                : 50 51 52
topdecl              : 76
type_                : 36 53 59 71


state 0

    (0) S' -> . prgm
    (75) prgm -> .
    (76) prgm -> . prgm topdecl

    DEF             reduce using rule 75 (prgm -> .)
    VAR             reduce using rule 75 (prgm -> .)
    EXCEPTION       reduce using rule 75 (prgm -> .)
    $end            reduce using rule 75 (prgm -> .)

    prgm                           shift and go to state 1

state 1

    (0) S' -> prgm .
    (76) prgm -> prgm . topdecl
    (72) topdecl -> . procdecl
    (73) topdecl -> . globvardecl
    (74) topdecl -> . exception
    (60) procdecl -> . DEF name LPAREN args RPAREN rty procdeclraises sblock
    (71) globvardecl -> . VAR name EQ expr COLON type_ SEMICOLON
    (70) exception -> . EXCEPTION name SEMICOLON

    DEF             shift and go to state 6
    VAR             shift and go to state 7
    EXCEPTION       shift and go to state 8

    topdecl                        shift and go to state 2
    procdecl                       shift and go to state 3
    globvardecl                    shift and go to state 4
    exception                      shift and go to state 5

state 2

    (76) prgm -> prgm topdecl .

    DEF             reduce using rule 76 (prgm -> prgm topdecl .)
    VAR             reduce using rule 76 (prgm -> prgm topdecl .)
    EXCEPTION       reduce using rule 76 (prgm -> prgm topdecl .)
    $end            reduce using rule 76 (prgm -> prgm topdecl .)


state 3

    (72) topdecl -> procdecl .

    DEF             reduce using rule 72 (topdecl -> procdecl .)
    VAR             reduce using rule 72 (topdecl -> procdecl .)
    EXCEPTION       reduce using rule 72 (topdecl -> procdecl .)
    $end            reduce using rule 72 (topdecl -> procdecl .)


state 4

    (73) topdecl -> globvardecl .

    DEF             reduce using rule 73 (topdecl -> globvardecl .)
    VAR             reduce using rule 73 (topdecl -> globvardecl .)
    EXCEPTION       reduce using rule 73 (topdecl -> globvardecl .)
    $end            reduce using rule 73 (topdecl -> globvardecl .)


state 5

    (74) topdecl -> exception .

    DEF             reduce using rule 74 (topdecl -> exception .)
    VAR             reduce using rule 74 (topdecl -> exception .)
    EXCEPTION       reduce using rule 74 (topdecl -> exception .)
    $end            reduce using rule 74 (topdecl -> exception .)


state 6

    (60) procdecl -> DEF . name LPAREN args RPAREN rty procdeclraises sblock
    (1) name -> . IDENT

    IDENT           shift and go to state 10

    name                           shift and go to state 9

state 7

    (71) globvardecl -> VAR . name EQ expr COLON type_ SEMICOLON
    (1) name -> . IDENT

    IDENT           shift and go to state 10

    name                           shift and go to state 11

state 8

    (70) exception -> EXCEPTION . name SEMICOLON
    (1) name -> . IDENT

    IDENT           shift and go to state 10

    name                           shift and go to state 12

state 9

    (60) procdecl -> DEF name . LPAREN args RPAREN rty procdeclraises sblock

    LPAREN          shift and go to state 13


state 10

    (1) name -> IDENT .

    LPAREN          reduce using rule 1 (name -> IDENT .)
    EQ              reduce using rule 1 (name -> IDENT .)
    SEMICOLON       reduce using rule 1 (name -> IDENT .)
    COLON           reduce using rule 1 (name -> IDENT .)
    PLUS            reduce using rule 1 (name -> IDENT .)
    DASH            reduce using rule 1 (name -> IDENT .)
    STAR            reduce using rule 1 (name -> IDENT .)
    SLASH           reduce using rule 1 (name -> IDENT .)
    PCENT           reduce using rule 1 (name -> IDENT .)
    AMP             reduce using rule 1 (name -> IDENT .)
    PIPE            reduce using rule 1 (name -> IDENT .)
    HAT             reduce using rule 1 (name -> IDENT .)
    LTLT            reduce using rule 1 (name -> IDENT .)
    GTGT            reduce using rule 1 (name -> IDENT .)
    AMPAMP          reduce using rule 1 (name -> IDENT .)
    PIPEPIPE        reduce using rule 1 (name -> IDENT .)
    EQEQ            reduce using rule 1 (name -> IDENT .)
    BANGEQ          reduce using rule 1 (name -> IDENT .)
    LT              reduce using rule 1 (name -> IDENT .)
    LTEQ            reduce using rule 1 (name -> IDENT .)
    GT              reduce using rule 1 (name -> IDENT .)
    GTEQ            reduce using rule 1 (name -> IDENT .)
    RPAREN          reduce using rule 1 (name -> IDENT .)
    COMMA           reduce using rule 1 (name -> IDENT .)
    LBRACE          reduce using rule 1 (name -> IDENT .)


state 11

    (71) globvardecl -> VAR name . EQ expr COLON type_ SEMICOLON

    EQ              shift and go to state 14


state 12

    (70) exception -> EXCEPTION name . SEMICOLON

    SEMICOLON       shift and go to state 15


state 13

    (60) procdecl -> DEF name LPAREN . args RPAREN rty procdeclraises sblock
    (56) args -> . args_1
    (57) args -> .
    (54) args_1 -> . arg
    (55) args_1 -> . args_1 COMMA arg
    (53) arg -> . name COLON type_
    (1) name -> . IDENT

    RPAREN          reduce using rule 57 (args -> .)
    IDENT           shift and go to state 10

    name                           shift and go to state 16
    args                           shift and go to state 17
    args_1                         shift and go to state 18
    arg                            shift and go to state 19

state 14

    (71) globvardecl -> VAR name EQ . expr COLON type_ SEMICOLON
    (4) expr -> . name
    (5) expr -> . TRUE
    (6) expr -> . FALSE
    (7) expr -> . NUMBER
    (8) expr -> . DASH expr
    (9) expr -> . TILD expr
    (10) expr -> . BANG expr
    (11) expr -> . expr PLUS expr
    (12) expr -> . expr DASH expr
    (13) expr -> . expr STAR expr
    (14) expr -> . expr SLASH expr
    (15) expr -> . expr PCENT expr
    (16) expr -> . expr AMP expr
    (17) expr -> . expr PIPE expr
    (18) expr -> . expr HAT expr
    (19) expr -> . expr LTLT expr
    (20) expr -> . expr GTGT expr
    (21) expr -> . expr AMPAMP expr
    (22) expr -> . expr PIPEPIPE expr
    (23) expr -> . expr EQEQ expr
    (24) expr -> . expr BANGEQ expr
    (25) expr -> . expr LT expr
    (26) expr -> . expr LTEQ expr
    (27) expr -> . expr GT expr
    (28) expr -> . expr GTEQ expr
    (29) expr -> . LPAREN expr RPAREN
    (30) expr -> . name LPAREN exprs_comma RPAREN
    (31) expr -> . PRINT LPAREN expr RPAREN
    (1) name -> . IDENT

    TRUE            shift and go to state 22
    FALSE           shift and go to state 23
    NUMBER          shift and go to state 24
    DASH            shift and go to state 25
    TILD            shift and go to state 26
    BANG            shift and go to state 27
    LPAREN          shift and go to state 28
    PRINT           shift and go to state 29
    IDENT           shift and go to state 10

    name                           shift and go to state 20
    expr                           shift and go to state 21

state 15

    (70) exception -> EXCEPTION name SEMICOLON .

    DEF             reduce using rule 70 (exception -> EXCEPTION name SEMICOLON .)
    VAR             reduce using rule 70 (exception -> EXCEPTION name SEMICOLON .)
    EXCEPTION       reduce using rule 70 (exception -> EXCEPTION name SEMICOLON .)
    $end            reduce using rule 70 (exception -> EXCEPTION name SEMICOLON .)


state 16

    (53) arg -> name . COLON type_

    COLON           shift and go to state 30


state 17

    (60) procdecl -> DEF name LPAREN args . RPAREN rty procdeclraises sblock

    RPAREN          shift and go to state 31


state 18

    (56) args -> args_1 .
    (55) args_1 -> args_1 . COMMA arg

    RPAREN          reduce using rule 56 (args -> args_1 .)
    COMMA           shift and go to state 32


state 19

    (54) args_1 -> arg .

    COMMA           reduce using rule 54 (args_1 -> arg .)
    RPAREN          reduce using rule 54 (args_1 -> arg .)


state 20

    (4) expr -> name .
    (30) expr -> name . LPAREN exprs_comma RPAREN

    COLON           reduce using rule 4 (expr -> name .)
    PLUS            reduce using rule 4 (expr -> name .)
    DASH            reduce using rule 4 (expr -> name .)
    STAR            reduce using rule 4 (expr -> name .)
    SLASH           reduce using rule 4 (expr -> name .)
    PCENT           reduce using rule 4 (expr -> name .)
    AMP             reduce using rule 4 (expr -> name .)
    PIPE            reduce using rule 4 (expr -> name .)
    HAT             reduce using rule 4 (expr -> name .)
    LTLT            reduce using rule 4 (expr -> name .)
    GTGT            reduce using rule 4 (expr -> name .)
    AMPAMP          reduce using rule 4 (expr -> name .)
    PIPEPIPE        reduce using rule 4 (expr -> name .)
    EQEQ            reduce using rule 4 (expr -> name .)
    BANGEQ          reduce using rule 4 (expr -> name .)
    LT              reduce using rule 4 (expr -> name .)
    LTEQ            reduce using rule 4 (expr -> name .)
    GT              reduce using rule 4 (expr -> name .)
    GTEQ            reduce using rule 4 (expr -> name .)
    RPAREN          reduce using rule 4 (expr -> name .)
    COMMA           reduce using rule 4 (expr -> name .)
    SEMICOLON       reduce using rule 4 (expr -> name .)
    LPAREN          shift and go to state 33


state 21

    (71) globvardecl -> VAR name EQ expr . COLON type_ SEMICOLON
    (11) expr -> expr . PLUS expr
    (12) expr -> expr . DASH expr
    (13) expr -> expr . STAR expr
    (14) expr -> expr . SLASH expr
    (15) expr -> expr . PCENT expr
    (16) expr -> expr . AMP expr
    (17) expr -> expr . PIPE expr
    (18) expr -> expr . HAT expr
    (19) expr -> expr . LTLT expr
    (20) expr -> expr . GTGT expr
    (21) expr -> expr . AMPAMP expr
    (22) expr -> expr . PIPEPIPE expr
    (23) expr -> expr . EQEQ expr
    (24) expr -> expr . BANGEQ expr
    (25) expr -> expr . LT expr
    (26) expr -> expr . LTEQ expr
    (27) expr -> expr . GT expr
    (28) expr -> expr . GTEQ expr

    COLON           shift and go to state 34
    PLUS            shift and go to state 35
    DASH            shift and go to state 36
    STAR            shift and go to state 37
    SLASH           shift and go to state 38
    PCENT           shift and go to state 39
    AMP             shift and go to state 40
    PIPE            shift and go to state 41
    HAT             shift and go to state 42
    LTLT            shift and go to state 43
    GTGT            shift and go to state 44
    AMPAMP          shift and go to state 45
    PIPEPIPE        shift and go to state 46
    EQEQ            shift and go to state 47
    BANGEQ          shift and go to state 48
    LT              shift and go to state 49
    LTEQ            shift and go to state 50
    GT              shift and go to state 51
    GTEQ            shift and go to state 52


state 22

    (5) expr -> TRUE .

    COLON           reduce using rule 5 (expr -> TRUE .)
    PLUS            reduce using rule 5 (expr -> TRUE .)
    DASH            reduce using rule 5 (expr -> TRUE .)
    STAR            reduce using rule 5 (expr -> TRUE .)
    SLASH           reduce using rule 5 (expr -> TRUE .)
    PCENT           reduce using rule 5 (expr -> TRUE .)
    AMP             reduce using rule 5 (expr -> TRUE .)
    PIPE            reduce using rule 5 (expr -> TRUE .)
    HAT             reduce using rule 5 (expr -> TRUE .)
    LTLT            reduce using rule 5 (expr -> TRUE .)
    GTGT            reduce using rule 5 (expr -> TRUE .)
    AMPAMP          reduce using rule 5 (expr -> TRUE .)
    PIPEPIPE        reduce using rule 5 (expr -> TRUE .)
    EQEQ            reduce using rule 5 (expr -> TRUE .)
    BANGEQ          reduce using rule 5 (expr -> TRUE .)
    LT              reduce using rule 5 (expr -> TRUE .)
    LTEQ            reduce using rule 5 (expr -> TRUE .)
    GT              reduce using rule 5 (expr -> TRUE .)
    GTEQ            reduce using rule 5 (expr -> TRUE .)
    RPAREN          reduce using rule 5 (expr -> TRUE .)
    COMMA           reduce using rule 5 (expr -> TRUE .)
    SEMICOLON       reduce using rule 5 (expr -> TRUE .)


state 23

    (6) expr -> FALSE .

    COLON           reduce using rule 6 (expr -> FALSE .)
    PLUS            reduce using rule 6 (expr -> FALSE .)
    DASH            reduce using rule 6 (expr -> FALSE .)
    STAR            reduce using rule 6 (expr -> FALSE .)
    SLASH           reduce using rule 6 (expr -> FALSE .)
    PCENT           reduce using rule 6 (expr -> FALSE .)
    AMP             reduce using rule 6 (expr -> FALSE .)
    PIPE            reduce using rule 6 (expr -> FALSE .)
    HAT             reduce using rule 6 (expr -> FALSE .)
    LTLT            reduce using rule 6 (expr -> FALSE .)
    GTGT            reduce using rule 6 (expr -> FALSE .)
    AMPAMP          reduce using rule 6 (expr -> FALSE .)
    PIPEPIPE        reduce using rule 6 (expr -> FALSE .)
    EQEQ            reduce using rule 6 (expr -> FALSE .)
    BANGEQ          reduce using rule 6 (expr -> FALSE .)
    LT              reduce using rule 6 (expr -> FALSE .)
    LTEQ            reduce using rule 6 (expr -> FALSE .)
    GT              reduce using rule 6 (expr -> FALSE .)
    GTEQ            reduce using rule 6 (expr -> FALSE .)
    RPAREN          reduce using rule 6 (expr -> FALSE .)
    COMMA           reduce using rule 6 (expr -> FALSE .)
    SEMICOLON       reduce using rule 6 (expr -> FALSE .)


state 24

    (7) expr -> NUMBER .

    COLON           reduce using rule 7 (expr -> NUMBER .)
    PLUS            reduce using rule 7 (expr -> NUMBER .)
    DASH            reduce using rule 7 (expr -> NUMBER .)
    STAR            reduce using rule 7 (expr -> NUMBER .)
    SLASH           reduce using rule 7 (expr -> NUMBER .)
    PCENT           reduce using rule 7 (expr -> NUMBER .)
    AMP             reduce using rule 7 (expr -> NUMBER .)
    PIPE            reduce using rule 7 (expr -> NUMBER .)
    HAT             reduce using rule 7 (expr -> NUMBER .)
    LTLT            reduce using rule 7 (expr -> NUMBER .)
    GTGT            reduce using rule 7 (expr -> NUMBER .)
    AMPAMP          reduce using rule 7 (expr -> NUMBER .)
    PIPEPIPE        reduce using rule 7 (expr -> NUMBER .)
    EQEQ            reduce using rule 7 (expr -> NUMBER .)
    BANGEQ          reduce using rule 7 (expr -> NUMBER .)
    LT              reduce using rule 7 (expr -> NUMBER .)
    LTEQ            reduce using rule 7 (expr -> NUMBER .)
    GT              reduce using rule 7 (expr -> NUMBER .)
    GTEQ            reduce using rule 7 (expr -> NUMBER .)
    RPAREN          reduce using rule 7 (expr -> NUMBER .)
    COMMA           reduce using rule 7 (expr -> NUMBER .)
    SEMICOLON       reduce using rule 7 (expr -> NUMBER .)


state 25

    (8) expr -> DASH . expr
    (4) expr -> . name
    (5) expr -> . TRUE
    (6) expr -> . FALSE
    (7) expr -> . NUMBER
    (8) expr -> . DASH expr
    (9) expr -> . TILD expr
    (10) expr -> . BANG expr
    (11) expr -> . expr PLUS expr
    (12) expr -> . expr DASH expr
    (13) expr -> . expr STAR expr
    (14) expr -> . expr SLASH expr
    (15) expr -> . expr PCENT expr
    (16) expr -> . expr AMP expr
    (17) expr -> . expr PIPE expr
    (18) expr -> . expr HAT expr
    (19) expr -> . expr LTLT expr
    (20) expr -> . expr GTGT expr
    (21) expr -> . expr AMPAMP expr
    (22) expr -> . expr PIPEPIPE expr
    (23) expr -> . expr EQEQ expr
    (24) expr -> . expr BANGEQ expr
    (25) expr -> . expr LT expr
    (26) expr -> . expr LTEQ expr
    (27) expr -> . expr GT expr
    (28) expr -> . expr GTEQ expr
    (29) expr -> . LPAREN expr RPAREN
    (30) expr -> . name LPAREN exprs_comma RPAREN
    (31) expr -> . PRINT LPAREN expr RPAREN
    (1) name -> . IDENT

    TRUE            shift and go to state 22
    FALSE           shift and go to state 23
    NUMBER          shift and go to state 24
    DASH            shift and go to state 25
    TILD            shift and go to state 26
    BANG            shift and go to state 27
    LPAREN          shift and go to state 28
    PRINT           shift and go to state 29
    IDENT           shift and go to state 10

    expr                           shift and go to state 53
    name                           shift and go to state 20

state 26
